--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: rupaks/ultimate-cicd:15
+        image: vsrekul/ultimate-cicd:${BUILD_NUMBER}
         ports:
         - containerPort: 8080
