--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
@@ -72,6 +72,11 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.0.2</version>
             </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-resources-plugin</artifactId>
+               <version>2.7</version>
+           </plugin>
 
         </plugins>
     </build>
