--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
@@ -73,9 +73,17 @@
                 <version>3.0.2</version>
             </plugin>
             <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-resources-plugin</artifactId>
-               <version>2.7</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <dependencies>
+                   <dependency>
+                     <groupId>org.apache.maven.shared</groupId>
+                     <artifactId>maven-filtering</artifactId>
+                     <version>1.3</version>
+                  </dependency>
+                </dependencies>
+           </plugin>
            </plugin>
 
         </plugins>
