--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
@@ -71,21 +71,24 @@
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.0.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.7</version>
-                <dependencies>
-                   <dependency>
-                     <groupId>org.apache.maven.shared</groupId>
-                     <artifactId>maven-filtering</artifactId>
-                     <version>1.3</version>
-                   </dependency>
-                </dependencies>
-           </plugin>          
+            </plugin>           
         </plugins>
+        <finalName>somename</finalName>
+        <testResources>
+            <testResource>
+            <directory>src/test/resources</directory>
+            <filtering>false</filtering>
+            </testResource>
+        </testResources>
+        <resources>
+            <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+            <excludes>
+                <exclude>*.jks</exclude>
+                <exclude>*.png</exclude>
+            </excludes>        
+            </resource>
+        </resources>
     </build>
-
-
 </project>
